chore: modifies tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-  "exclude": ["**/*.spec.ts"],
+  "include": ["src/**/*"],
+  "exclude": ["dist/*", "**/*.spec.ts"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
